java/java-tests/testData/codeInsight/daemonCodeAnalyzer/semicolonHighlighting/SemicolonBetweenImport.java
package foo;

import java.util.List;
<error descr="Extra semicolons between import statements are not allowed">;</error>
import java.util.Date;

class Foo {}